[package]
name = "multithreaded-testing-in-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
bb8 = "0.8"
bb8-postgres = "0.8"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "migrate",
] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"

[dev-dependencies]
wiremock = "0.6"
test-case = "3.3"
rand = "0.8.5"
